@@ -11,6 +11,9 @@ import com.dotnt.cinemaback.repositories.MovieRepository;
 import com.dotnt.cinemaback.services.IMovieService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -45,16 +48,6 @@ public class MovieService implements IMovieService {
                 .duration(movieRequestDTO.getDuration())
                 .director(movieRequestDTO.getDirector())
                 .releaseDate(LocalDate.parse(movieRequestDTO.getReleaseDate()))
-                .movieImages(List.of(
-                        MovieImage.builder()
-                                .url(movieRequestDTO.getPoster())
-                                .title("POSTER")
-                                .build(),
-                        MovieImage.builder()
-                                .url(movieRequestDTO.getTrailer())
-                                .title("TRAILER")
-                                .build()
-                ))
                 .movieGenres(movieGenres)
                 .status(movieRequestDTO.getStatus())
                 .price(movieRequestDTO.getPrice())
@@ -63,7 +56,18 @@ public class MovieService implements IMovieService {
 
         Movie finalMovie = movie;
         movie.getMovieGenres().forEach(mg -> mg.setMovie(finalMovie));
-
+        movie.setMovieImages(List.of(
+                MovieImage.builder()
+                        .url(movieRequestDTO.getPoster())
+                        .title("POSTER")
+                        .movie(finalMovie)
+                        .build(),
+                MovieImage.builder()
+                        .url(movieRequestDTO.getTrailer())
+                        .title("TRAILER")
+                        .movie(finalMovie)
+                        .build()
+        ));
 
         // Save the movie entity to the repository
         movie = movieRepository.save(finalMovie);
@@ -76,17 +80,13 @@ public class MovieService implements IMovieService {
                 .duration(finalMovie.getDuration())
                 .director(finalMovie.getDirector())
                 .releaseDate(finalMovie.getReleaseDate().toString())
-                .poster(finalMovie.getMovieImages().stream()
-                        .filter(movieImage -> movieImage.getTitle().equals("POSTER"))
-                        .findFirst()
-                        .map(MovieImage::getUrl)
-                        .orElse(""))
-                .trailer(finalMovie.getMovieImages().stream()
-                        .filter(movieImage -> movieImage.getTitle().equals("TRAILER"))
-                        .findFirst()
-                        .map(MovieImage::getUrl)
-                        .orElse(""))
-                .genres(finalMovie.getMovieGenres().stream().map(movieGenre -> movieGenre.getGenre().getName()).collect(Collectors.toList()))
+                .images(finalMovie.getMovieImages().stream().toList())
+                .genres(finalMovie
+                        .getMovieGenres()
+                        .stream()
+                        .map(movieGenre -> movieGenre
+                                .getGenre()
+                                .getName()).collect(Collectors.toList()))
                 .status(movie.getStatus())
                 .build();
 
@@ -170,16 +170,8 @@ public class MovieService implements IMovieService {
 //                .cast(existingMovie.getCast())
                 .genres(existingMovie.getMovieGenres().stream().map(movieGenre -> movieGenre.getGenre().getName()).toList())
                 .releaseDate(existingMovie.getReleaseDate().toString())
-                .poster(existingMovie.getMovieImages().stream()
-                        .filter(movieImage -> movieImage.getTitle().equals("POSTER"))
-                        .findFirst()
-                        .map(MovieImage::getUrl)
-                        .orElse(""))
-                .trailer(existingMovie.getMovieImages().stream()
-                        .filter(movieImage -> movieImage.getTitle().equals("TRAILER"))
-                        .findFirst()
-                        .map(MovieImage::getUrl)
-                        .orElse(""))
+
+                .images(existingMovie.getMovieImages().stream().toList())
                 .status(existingMovie.getStatus())
                 .build();
     }
@@ -211,16 +203,7 @@ public class MovieService implements IMovieService {
                         .director(movie.getDirector())
                         .genres(movie.getMovieGenres().stream().map(movieGenre -> movieGenre.getGenre().getName()).toList())
                         .releaseDate(movie.getReleaseDate().toString())
-                        .poster(movie.getMovieImages().stream()
-                                .filter(movieImage -> movieImage.getTitle().equals("POSTER"))
-                                .findFirst()
-                                .map(MovieImage::getUrl)
-                                .orElse(""))
-                        .trailer(movie.getMovieImages().stream()
-                                .filter(movieImage -> movieImage.getTitle().equals("TRAILER"))
-                                .findFirst()
-                                .map(MovieImage::getUrl)
-                                .orElse(""))
+                        .images(movie.getMovieImages().stream().toList())
                         .status(movie.getStatus())
                         .build())
                 .orElseThrow(() -> new RuntimeException("Movie not found or is inactive"));
@@ -228,11 +211,29 @@ public class MovieService implements IMovieService {
 
     @Override
     public List<MovieResponseDTO> getAllMovies(int page, int limit) {
+        Pageable pageable = PageRequest.of(page - 1, limit);
+        Page<Movie> moviePage = movieRepository.findByStatusNot("INACTIVE", pageable);
 
-        return movieRepository.findAll().stream()
-                .filter(movie -> !movie.getStatus().equals("INACTIVE"))
-                .skip((page - 1) * limit)
-                .limit(limit)
+        return moviePage.stream()
+                .map(movie -> MovieResponseDTO.builder()
+                        .id(movie.getId())
+                        .title(movie.getTitle())
+                        .description(movie.getDescription())
+                        .duration(movie.getDuration())
+                        .director(movie.getDirector())
+                        .genres(movie.getMovieGenres().stream()
+                                .map(movieGenre -> movieGenre.getGenre().getName())
+                                .toList())
+                        .releaseDate(movie.getReleaseDate().toString())
+                        .images(movie.getMovieImages().stream().toList())
+                        .status(movie.getStatus())
+                        .build())
+                .toList();
+    }
+
+    @Override
+    public List<MovieResponseDTO> getMoviesByGenreName(String name) {
+        return movieRepository.findByMovieGenres_Genre_NameIgnoreCase(name).stream()
                 .map(movie -> MovieResponseDTO.builder()
                         .id(movie.getId())
                         .title(movie.getTitle())
@@ -241,18 +242,60 @@ public class MovieService implements IMovieService {
                         .director(movie.getDirector())
                         .genres(movie.getMovieGenres().stream().map(movieGenre -> movieGenre.getGenre().getName()).toList())
                         .releaseDate(movie.getReleaseDate().toString())
-                        .poster(movie.getMovieImages().stream()
-                                .filter(movieImage -> movieImage.getTitle().equals("POSTER"))
-                                .findFirst()
-                                .map(MovieImage::getUrl)
-                                .orElse(""))
-                        .trailer(movie.getMovieImages().stream()
-                                .filter(movieImage -> movieImage.getTitle().equals("TRAILER"))
-                                .findFirst()
-                                .map(MovieImage::getUrl)
-                                .orElse(""))
+                        .images(movie.getMovieImages().stream().toList())
                         .status(movie.getStatus())
                         .build())
                 .toList();
+    }
+
+    @Override
+    public List<MovieResponseDTO> getMoviesByShowingStatus() {
+        List<Movie> showingMovies = movieRepository.findByStatusIgnoreCase("Showing");
+
+        return showingMovies.stream()
+                .map(movie -> MovieResponseDTO.builder()
+                        .id(movie.getId())
+                        .title(movie.getTitle())
+                        .description(movie.getDescription())
+                        .duration(movie.getDuration())
+                        .director(movie.getDirector())
+                        .genres(movie.getMovieGenres().stream()
+                                .map(movieGenre -> movieGenre.getGenre().getName())
+                                .toList())
+                        .releaseDate(movie.getReleaseDate().toString())
+                        .images(movie.getMovieImages().stream().toList())
+                        .status(movie.getStatus())
+                        .build())
+                .toList();
+    }
+
+    @Override
+    public List<MovieResponseDTO> getMoviesByUpComingStatus() {
+        List<Movie> upcomingMovies = movieRepository.findByStatusIgnoreCase("Upcoming");
+
+        return upcomingMovies.stream()
+                .map(movie -> MovieResponseDTO.builder()
+                        .id(movie.getId())
+                        .title(movie.getTitle())
+                        .description(movie.getDescription())
+                        .duration(movie.getDuration())
+                        .director(movie.getDirector())
+                        .genres(movie.getMovieGenres().stream()
+                                .map(movieGenre -> movieGenre.getGenre().getName())
+                                .toList())
+                        .releaseDate(movie.getReleaseDate().toString())
+                        .images(movie.getMovieImages().stream().toList())
+                        .status(movie.getStatus())
+                        .build())
+                .toList();
+    }
+
+    @Override
+    public List<String> getTypesByMovieId(UUID id) {
+        Movie movie = movieRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Movie not found"));
+        return movie.getMovieGenres().stream()
+                .map(movieGenre -> movieGenre.getGenre().getName())
+                .collect(Collectors.toList());
     }
 }
